arreglado problema de tipos de datos, la pantalla muestra el CU correctamente, verificar posibles fallar al probar el programa